created particle system

--- a/app/index.html
+++ b/app/index.html
@@ -3,12 +3,21 @@
 <head>
 	<meta charset="UTF-8">
 	<title>MPV</title>
+	<style>
+		* {
+			padding: 0;
+			margin: 0;
+		}
+		body {
+			background: #000;
+			overflow: hidden;
+		}
+
+	</style>
 </head>
 <body>
 
-	<div id="main">
-		<h1>TESTING!!!!</h1>
-	</div>
+	<canvas id="stage"></canvas>
 
 	<script src="assets/js/bundle.js"></script>
 </body>
